--- a/app/src/main/res/layout/activity_control_panel.xml
+++ b/app/src/main/res/layout/activity_control_panel.xml
@@ -6,6 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/control_panel_layout"
     tools:context=".ControlPanel">
 
     <RelativeLayout
@@ -29,7 +30,8 @@
                 android:id="@+id/forward"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_alignParentBottom="true" />
+                android:layout_alignParentBottom="true"
+                android:onClick="controlButtonClicked" />
         </RelativeLayout>
 
         <RelativeLayout
